# MapReduce

./: CMakeLists.txt  MapReduceClient.cpp  MapReduceFramework.cpp  README
